--- a/HTML-tutorial.html
+++ b/HTML-tutorial.html
@@ -14,15 +14,15 @@
     <ul>
         <li style="font-size: large; font-style: normal; font-weight: 600;">HTML Topics</li>
         <ol>
-            <li><a href="">What is HTML?</a></li>
-            <li><a href="">HTML Document</a></li>
-            <li><a href="">HTML Heading tag</a></li>
-            <li><a href="">HTML Paragraph tag</a></li>
-            <li><a href="">HTML Pre formatting tag</a></li>
-            <li><a href="">HTML Anchor tags</a></li>
-            <li><a href="">HTML Links</a></li>
-            <li><a href="">HTML Images</a></li>
-            <li><a href="">HTML Forms</a></li>
+            <li><a href="./html_prgms/_1.html">What is HTML?</a></li>
+            <li><a href="./html_prgms/_2.html">HTML Document</a></li>
+            <li><a href="./html_prgms/_3_heading.html">HTML Heading tag</a></li>
+            <li><a href="./html_prgms/_4_paragraph.html">HTML Paragraph tag</a></li>
+            <li><a href="./html_prgms/_pre_formatting_tag.html">HTML Pre formatting tag</a></li>
+            <li><a href="./html_prgms/_anchor_tag.html">HTML Anchor tags</a></li>
+            <li><a href="./html_prgms/_6_links.html">HTML Links</a></li>
+            <li><a href="./html_prgms/_7_img_wid_hig.html">HTML Images</a></li>
+            <li><a href="./html_prgms/_html_forms.html">HTML Forms</a></li>
         </ol>
     </ul>
 </body>
