Reassigned file location and path changed in program

--- a/HTML-tutorial.html
+++ b/HTML-tutorial.html
@@ -14,15 +14,15 @@
     <ul>
         <li style="font-size: large; font-style: normal; font-weight: 600;">HTML Topics</li>
         <ol>
-            <li><a href="./1.html">What is HTML?</a></li>
-            <li><a href="./2.html">HTML Document</a></li>
-            <li><a href="./3_heading.html">HTML Heading tag</a></li>
-            <li><a href="./4_paragraph.html">HTML Paragraph tag</a></li>
-            <li><a href="./pre_formatting_tag.html">HTML Pre formatting tag</a></li>
-            <li><a href="./anchor_tag.html">HTML Anchor tags</a></li>
-            <li><a href="./6_links.html">HTML Links</a></li>
-            <li><a href="./7_img_wid_hig.html">HTML Images</a></li>
-            <li><a href="./html_forms.html">HTML Forms</a></li>
+            <li><a href="./html_prgms/1.html">What is HTML?</a></li>
+            <li><a href="./html_prgms/2.html">HTML Document</a></li>
+            <li><a href="./html_prgms/3_heading.html">HTML Heading tag</a></li>
+            <li><a href="./html_prgms/4_paragraph.html">HTML Paragraph tag</a></li>
+            <li><a href="./html_prgms/pre_formatting_tag.html">HTML Pre formatting tag</a></li>
+            <li><a href="./html_prgms/anchor_tag.html">HTML Anchor tags</a></li>
+            <li><a href="./html_prgms/6_links.html">HTML Links</a></li>
+            <li><a href="./html_prgms/7_img_wid_hig.html">HTML Images</a></li>
+            <li><a href="./html_prgms/html_forms.html">HTML Forms</a></li>
         </ol>
     </ul>
 </body>
